fixed mp spacing

--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,14 @@ body {
     margin-bottom: 50px
   }
 
+  #secondary{
+    color: #ADD8E6;
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 60px;
+    font-weight: 800;
+    margin-bottom: 20px
+  }
+
   .container-fluid{
     margin-top: 20px;
   }
@@ -52,7 +60,7 @@ body {
     font-size: 20px;
     font-weight: normal;
     color: #4682B4 ;
-    margin-top: 50px;
+    margin-top: 20px;
   }
   
   #row1{
